readme, docstrings, refs #9846

--- a/README
+++ b/README
@@ -12,14 +12,15 @@ yowie.open_url(url, **kwargs)
 
 This function open url and return file object. Url attribute can be local
 file path or full url path. Allowed protocols are local file path, file,
-http and ftp. kwargs - additional attributes according to protocol, e.g.
-'mode' for file://, 'proxy' or 'timeout' for http://.
+http and ftp. kwargs are additional attributes according to protocol -
+'mode' for local path and file protocol, 'proxy', 'data' and 'timeout'
+(Python >= 2.6) for http and ftp protocols.
 
-url argument examples:
+Examples:
 
 open_url('/home/praetorian/secret.txt')
-open_url('file:///home/praetorian/secret.txt')
-open_url('http://domain.tld/secret.txt')
+open_url('file:///home/praetorian/secret.txt', mode='r')
+open_url('http://domain.tld/secret.txt', proxy='172:16:1:100:8000')
 open_url('ftp://domain.tld/secret.txt')
 
 ----------------------------------------------------
