--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+centrum-python-yowie (0.3-1) unstable; urgency=low
+
+  * Build from f886117
+
+ -- Jan Seifert <jan.seifert@centrumholdings.com>  Wed, 26 Jan 2011 08:28:41 +0100
+
 python-yowie (0.3) unstable; urgency=low
 
   * Build from fd1584a
